--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "webpack --config webpack.spec.ts --progress --color && karma start",
     "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 3000  --content-base src",
-    "api": "angularclass-server --api retain --port 3000"
+    "api": "angularclass-server --api retain --port 3500"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,12 @@
     "@types/core-js": "^0.9.33",
     "@types/lodash": "^4.14.35",
     "@types/node": "^6.0.39",
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-mocks": "^1.5.0",
+    "base64-js": "^1.2.0",
+    "bower": "^1.3.12",
+    "browserstacktunnel-wrapper": "^1.4.2",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.23.1",
     "jasmine-core": "^2.4.1",
